--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -10,6 +10,10 @@
   background: #e1ecff;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
